--- a/argo-apps/kwatt-dev.yaml
+++ b/argo-apps/kwatt-dev.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/devkezisoft/kwatt-services-api-gitops
     path: apps/kwatt-app/overlays/dev
-    targetRevision: main
+    targetRevision: master
   destination:
     server: https://kubernetes.default.svc
     namespace: kwatt-dev
