--- a/apps/kwatt-app/base/deployment.yaml
+++ b/apps/kwatt-app/base/deployment.yaml
@@ -17,3 +17,5 @@ spec:
           image: ghcr.io/devkezisoft/kwatt-app:latest
           ports:
             - containerPort: 8080
+      imagePullSecrets:
+        - name: ghcr-secret
