--- a/apps/kwatt-app/overlays/dev/patch-image.yaml
+++ b/apps/kwatt-app/overlays/dev/patch-image.yaml
@@ -7,4 +7,4 @@ spec:
     spec:
       containers:
         - name: kwatt-app
-          image: ghcr.io/devkezisoft/kwatt-app:latest
+          image: ghcr.io/devkezisoft/kwatt-app:0.0.1-SNAPSHOT
