--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,11 +46,11 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-          TF_VAR_scaleway_access_key: ${{ secrets.TF_VAR_scaleway_access_key }}
-          TF_VAR_scaleway_secret_key: ${{ secrets.TF_VAR_scaleway_secret_key }}
-          TF_VAR_scaleway_project_id: ${{ secrets.TF_VAR_scaleway_project_id }}
-          TF_VAR_scaleway_region: ${{ secrets.TF_VAR_scaleway_region }}
-          TF_VAR_scaleway_zone: ${{ secrets.TF_VAR_scaleway_zone }}
-          TF_VAR_ghcr_username: ${{ secrets.TF_VAR_ghcr_username }}
-          TF_VAR_ghcr_pat: ${{ secrets.TF_VAR_ghcr_pat }}
-          TF_VAR_ghcr_email: ${{ secrets.TF_VAR_ghcr_email }}
+          TF_VAR_scaleway_access_key: ${{ secrets.TF_VAR_SCALEWAY_ACCESS_KEY }}
+          TF_VAR_scaleway_secret_key: ${{ secrets.TF_VAR_SCALEWAY_SECRET_KEY }}
+          TF_VAR_scaleway_project_id: ${{ secrets.TF_VAR_SCALEWAY_PROJECT_ID }}
+          TF_VAR_scaleway_region: ${{ secrets.TF_VAR_SCALEWAY_REGION }}
+          TF_VAR_scaleway_zone: ${{ secrets.TF_VAR_SCALEWAY_ZONE }}
+          TF_VAR_ghcr_username: ${{ secrets.TF_VAR_GHCR_USERNAME }}
+          TF_VAR_ghcr_pat: ${{ secrets.TF_VAR_GHCR_PAT }}
+          TF_VAR_ghcr_email: ${{ secrets.TF_VAR_GHCR_EMAIL }}
