--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,6 +26,7 @@ jobs:
       TF_VAR_scaleway_access_key: ${{ secrets.TF_VAR_SCALEWAY_ACCESS_KEY }}
       TF_VAR_scaleway_secret_key: ${{ secrets.TF_VAR_SCALEWAY_SECRET_KEY }}
       TF_VAR_scaleway_project_id: ${{ secrets.TF_VAR_SCALEWAY_PROJECT_ID }}
+      TF_VAR_scaleway_PRIVATE_NETWORK_ID: ${{ secrets.SCALEWAY_PRIVATE_NETWORK_ID }}
       TF_VAR_scaleway_region: ${{ secrets.TF_VAR_SCALEWAY_REGION }}
       TF_VAR_scaleway_zone: ${{ secrets.TF_VAR_SCALEWAY_ZONE }}
       TF_VAR_ghcr_username: ${{ secrets.TF_VAR_GHCR_USERNAME }}
